<resources>
    <string name="app_name">MyRubelApp</string>
    <string name="img_splashscreen">img_splashscreen</string>
    <string name="title">What will you learn today ?</string>
    <string name="YOUTUBE_API">AIzaSyAgM_WTHoLIJqTh_s3qMqJyARCZvNwiRFc</string>
    <string name="Hello">Welcome to RuBel</string>
    <string name="play">Play</string>
    <string name="introduction">This is me</string>
    <string name="time">What time is it ?</string>
    <string name="world">This is my world !</string>
    <string name="quiz">Quiz !</string>
    <string name="greetings">Greetings</string>
    <string name="absen">Absensi</string>
    <string name="subName1">Sub Greeting</string>
    <string name="summary1">Summary</string>
    <string name="img_subGreet">img_SubGreet</string>
    <string name="how_to_greeting">How to greeting someone</string>
    <string name="sign_in1">Masuk Akun</string>
    <string name="sign_up">Daftarkan Akun Baru</string>
    <string name="sign_up1">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="name">Nama</string>
    <string name="email">Email Address</string>
    <string name="photo">Photo</string>
    <string name="selamat_datang">Selamat Datang Di Ruang Belajar</string>
    <string name="simpan_dan_lanjutkan">Simpan Dan Lanjutkan</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="how_to_response">How to response</string>

    <string name="list_greeting">Hello/Hi! (Halo/Hai!)\nGood Morning (Selamat Pagi)\nGood Afternoon (Selamat Siang)\nGood Evening (Selamat Sore)\nGood Night (Selamat Malam)\nHello, how are you ? (halo apa kabarmu?)\nHow are you doing ? (Bagaimana kabarmu?)\nGood to see you (Senang bertemu kamu)</string>
    <string name="list_response">Hello/Hi (Halo/Hai)\nGood Morning (Selamat Pagi)\nGood Afternoon (Selamat Siang)\nGood Evening (Selamat Sore)\nGood Night (Selamat Malam)\nI am fine thank you (Aku baik, terima kasih)\nPretty well, What about you? (Sangat baik, bagaimana denganmu?)\nGood to see you too (Senang bertemu denganmu juga)</string>

    <string name="tujuh1">VII 1</string>
    <string name="simpan_data">Simpan Data</string>
    <string name="kelas">Kelas</string>
    <string name="tujuh2">VII 2</string>
    <string name="greeting">Greetings and Partings</string>
    <string name="greeting_explain">Belajar cara menyapa dan berpamitan dengan orang lain dan cara menanggapinya</string>
    <string name="gratitude_explain">Belajar cara mengungkapkan rasa terimakasih kepada orang lain dan cara menanggapinya</string>
    <string name="gratitude">Expressing Gratitude</string>
    <string name="apologize">Expressing Apology</string>
    <string name="apologize_explain">Belajar cara meminta maaf kepada orang lain serta cara menanggapinya</string>
    <string name="how_to_expressing">How To Expressing Grattitude</string>
    <string name="expressing_apology">How to expressing apology</string>
    <string name="self_intro">Introduction Oneself and Others</string>
    <string name="intro_explain">Belajar cara memperkenalkan diri sendiri dan orang lain</string>
    <string name="ask_information">Ask For Information</string>
    <string name="ask_explain">Belajar cara menanyakan informasi diri orang lain</string>
    <string name="family_member">Family Member</string>
    <string name="family_explain">Belajar tentang sebutan anggota keluarga inti dan yang lebih luas serta orang-orang terdekat</string>
    <string name="grammar">Simple Present Tense</string>
    <string name="grammar_explain">Belajar cara menyusun kalimat yang sesuai dengan aturan Simple Present Tense serta penggunaan kata kerja be, have, go, work and live</string>
    <string name="pronoun">Pronoun</string>
    <string name="pronoun_explain">Belajar tentang sebutan kata ganti Subjek : I, You, They, We, She, He, It </string>
    <string name="how_to_introduce_yourself">How To Introduce Yourself</string>
    <string name="how_to_introduce_others">How To Introduce Others</string>
    <string name="time2">Name of Time</string>
    <string name="time_explain">Belajar nama-nama waktu, menyebutkan/menanyakan waktu dari keadaan/peristiwa/kegiatan</string>
    <string name="clock">Clock</string>
    <string name="clock_explain">Belajar cara membaca jam dalam bahasa Inggris.</string>
    <string name="number">Ordinal Number</string>
    <string name="number_explain">Belajar angka ordinal dengan the untuk menyebut tanggal (lisan) : the first, the second, the third dan angka ordinal tan[a the untuk menyebut tanggal 1st, 2nd, 3rd, 4th</string>
    <string name="environment">Noun and Environment</string>
    <string name="envi_explain">Mengidentifikasi dan menyebutkan berbagai benda, binatang, dna bangunan umum di lingkungan sekitar</string>
    <string name="article">Article</string>
    <string name="article_explain">Penyebutan benda dengan a/an</string>
    <string name="plural">Pluran Noun</string>
    <string name="plural_explain">Penambahan s/es pada benda dalam bentuk jamak</string>
    <string name="demonstrative">Demonstrative</string>
    <string name="demo_explain">Penggunaan kata tunjuk this, that, these dan those</string>
    <string name="preposition_of_time">Preposition of Time</string>
    <string name="prepo_explain">Preposisi untuk bulan, tahun, hari dan waktu dalam hari</string>
    <string name="rules_asking">Aturan dalam Asking for Information</string>
    <string name="example_asking">Contoh Asking for Information</string>
    <string name="giving_info">Contoh Giving Information</string>
    <string name="nuclear_family">Nuclear Familiy (Keluarga Inti)</string>
    <string name="law_family">Family in Law</string>
    <string name="extended_family">Extended Family (Keluarga Besar)</string>
    <string name="function_present">Fungsi Simple Present Tense</string>
    <string name="simple_present_tense">Simple Present Tense</string>
    <string name="rumus">Rumus</string>
    <string name="pronoun1">Pronouns (kata ganti) merupakan kata yang digunakan untuk menggantikan kata benda (noun) dalam bahasa Inggris, dan pronouns  terbagi menjadi beberapa macam sesuai dengan fungsinya.</string>
    <string name="preposition_example">Contoh penggunaan</string>
    <string name="ordinal_number">Ordinal Number</string>
    <string name="telling_time">Telling Time</string>
    <string name="day">Day (Hari)</string>
    <string name="month">Month (Bulan)</string>
    <string name="fungsi_article">Fungsi a/n dalam bahasa Inggris</string>
    <string name="demonstrative_kata">Demonstrative (Kata Tunjuk)</string>
    <string name="things_around">Things around us (Benda di sekitar kita)</string>
    <string name="kitchen">Kitchen (Dapur)</string>
    <string name="living_room">Living room (Ruang Tamu)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="keep_it_up_to_date">Keep it up to date</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="quiztime">QuizTime</string>
    <string name="submit">SUBMIT</string>
    <string name="finish">FINISH</string>
    <string name="hey_congratulations">Hey, Congratulations!</string>
    <string name="chat">Chat</string>
    <string name="about">About</string>
    <string name="logout">Log Out</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="grade">Grade</string>
    <string name="date">date_today</string>
    <string name="publish">publish</string>
    <string name="announcement">Announcement</string>
    <string name="judul">Judul</string>
    <string name="pengumuman">Pengumuman</string>
    <string name="ki_kd"><![CDATA[KI & KD]]></string>
</resources>