<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_greetings"
    android:background="@color/blue"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_greeting"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="8dp">
            <ImageView
                android:id="@+id/imgGreeting"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/img_subGreet"
                android:scaleType="centerCrop"
                android:src="@drawable/hello"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSubEnvi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="115dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/greeting"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgGreeting"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSubEnvi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="115dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/greeting_explain"
                app:layout_constraintStart_toEndOf="@+id/imgGreeting"
                app:layout_constraintTop_toBottomOf="@+id/tvSubEnvi" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_gratitude"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/imgArticle"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/img_subGreet"
                    android:scaleType="centerCrop"
                    android:src="@drawable/thankyou"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvSubArticle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="115dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/gratitude"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imgArticle"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvSubArticle2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="115dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:text="@string/gratitude_explain"
                    app:layout_constraintStart_toEndOf="@+id/imgArticle"
                    app:layout_constraintTop_toBottomOf="@+id/tvSubArticle" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_apologize"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/imgNumber"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/img_subGreet"
                    android:scaleType="centerCrop"
                    android:src="@drawable/sorry"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvSubApologize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="115dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/apologize"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imgNumber"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvSubApologize2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="115dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:text="@string/apologize_explain"
                    app:layout_constraintStart_toEndOf="@+id/imgNumber"
                    app:layout_constraintTop_toBottomOf="@+id/tvSubApologize" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
